Added date and city

--- a/_posts/2022-01-26-namastey.md
+++ b/_posts/2022-01-26-namastey.md
@@ -1,6 +1,8 @@
 ---
 published: true
 ---
+2022-01-26 - Singapore
+
 Well, hello (again) world! Glad to be back. 
 
 Been away from the blogging scene since late 2014. I've stumbled upon GeoHot's [the singularity is nearer](https://geohot.github.io/blog/) this evening and felt like writing again. 
